--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 11: Rian Cesar</title>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <h1>DCC202 - Atividade 11: Rian Cesar</h1>
