adiciona seção com titulo, paragrafo, buttons e lista ordenada.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <script src="main.js" type="module"></script>
 </head>
 <body>
-    <h1>DCC202 - Atividade 11: Rian Cesar</h1>
+    <main>
+        <h1>DCC202 - Atividade 11: Rian Cesar</h1>
+        <section>
+            <h2>Lista</h2>
+            <p id="entrada" contenteditable>Item</p>
+            <button id="adicionar">Adicionar</button>
+            <button id="limpar">Limpar Lista</button>
+            <ol id="itens"></ol>
+        </section>
+    </main>
 </body>
 </html>
