corrige o atributo lang do HTML para 'pt' e adiciona um parágrafo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
 <body>
     <main>
         <h1>DCC202 - Atividade 11: Rian Cesar</h1>
+        <p>Esta é a página principal tem código JavaScript nela. Você deve iteragir com os elementos e ver o resultado na página.</p>
         <section>
             <h2>Lista</h2>
             <p id="entrada" contenteditable>Item</p>
